--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <!-- Image -->
                     <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-                        <img src="banner.jpeg" alt="About Samanvay" class="img-fluid rounded shadow"
+                        <img src="WhatsApp Image 2025-07-07 at 14.45.46.jpeg" alt="About Samanvay" class="img-fluid rounded shadow"
                             style="object-fit: cover; width: 100%; height: auto;">
                     </div>
 
@@ -114,7 +114,7 @@
 
       <section class="timerbody mb-4">
   <div class="container mt-3">
-    <h1 class="text-center mb-5">Countdown to Innovation Begins</h1>
+    <h1 class="text-center mb-5">Countdown to Samanbay Begins</h1>
 
     <!-- Countdown Timer -->
     <div class="row justify-content-center" id="countdown-timer">
@@ -147,8 +147,9 @@
     <!-- Register Button -->
     <div class="row justify-content-center mt-5">
       <div class="col-md-4 mb-4">
-        <button class="btn btn-primary w-100">REGISTER NOW</button>
-      </div>
+        <a href=" https://zfrmz.in/0rb8QnYvfzhguWQmcYiv" target="_blank" class="btn btn-primary w-100 text-white text-decoration-none">
+          REGISTER NOW
+      </a>      </div>
     </div>
 
     <!-- Agenda & Brochure Buttons -->
@@ -423,11 +424,19 @@
                 </div>
                 <!-- 👇 Removed data-aos from here or changed to fade-up -->
                 <div class="col-lg-8">
-                  <ul class="list-unstyled text-white">
-                    <li>Email: <a href="mailto:vishal@iitkdf.org" class="text-white">vishal@iitkdf.org</a></li>
-                    <li>Phone: <a href="tel:+911265612844" class="text-white">+91 1265612844</a></li>
+                  <ul class="list-unstyled text-white" style="font-size: 1.3rem; line-height: 1.8;">
+                    <li style="margin-bottom: 8px;">
+                      <strong style="margin-right: 6px;">Renu Bhardwaj:</strong>
+                      <a href="mailto:renu@iitkdf.org" class="text-white" style="text-decoration: underline;">renu@iitkdf.org</a>
+                    </li>
+                    <li>
+                      <strong style="margin-right: 6px;">Vishal Singh:</strong>
+                      <a href="mailto:vishal@iitkdf.org" class="text-white" style="text-decoration: underline;">vishal@iitkdf.org</a>
+                    </li>
                   </ul>
                 </div>
+                
+                
               </div>
             </div>
           </section>
