--- a/index.html
+++ b/index.html
@@ -151,12 +151,14 @@
         <!-- Agenda & Brochure Buttons -->
         <div class="row justify-content-center">
           <div class="col-md-3 col-sm-6 mb-3">
-            <button class="btn btn-secondary w-100">AGENDA</button>
+            <a href="MTM- IITK Samanvay_2025_Final_WD.pdf" target="_blank" class="btn btn-secondary w-100">AGENDA</a>
           </div>
           <div class="col-md-3 col-sm-6 mb-3">
-            <button class="btn btn-secondary w-100">REPORT 2024</button>
+            <a href="samanvay_report__2025_1.pdf" target="_blank" class="btn btn-secondary w-100">REPORT 2024</a>
           </div>
         </div>
+        
+        
       </div>
     </section>
 
