--- a/index.html
+++ b/index.html
@@ -306,9 +306,11 @@
       <div class="container-fluid">
         <div class="row g-0 align-items-stretch">
     
-          <!-- Left Image -->
+          <!-- Left Image using responsive background DIV -->
           <div class="col-lg-6 px-0" data-aos="fade-right" data-aos-duration="1000">
-            <img src="focus areas.jpeg" alt="Focus Areas" class="img-fluid w-100 h-100 object-fit-cover d-block" />
+            <div class="img-container">
+              <img src="focus areas.jpeg" alt="Focus Areas" class="img-fluid w-100" />
+            </div>
           </div>
     
           <!-- Right Content -->
