new design2  please

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
               <div class="col-12" data-aos="fade-left" data-aos-delay="300">
                 <div class="compact-destination" >
                   <div class="destination-image">
-                    <img src="focus areas.jpeg" alt="Schedule" class="img-fluid">
+                    <img src="Ai.jpeg" alt="Schedule" class="img-fluid">
                   </div>
                   <div class="destination-details">
                     <h3>Artificial Intelligence</h3>
@@ -380,7 +380,7 @@
               <div class="col-12" data-aos="fade-left" data-aos-delay="400">
                 <div class="compact-destination">
                   <div class="destination-image">
-                    <img src="focus areas.jpeg" alt="Travel Info" class="img-fluid">
+                    <img src="Sustainability.jpeg" alt="Travel Info" class="img-fluid">
                   </div>
                   <div class="destination-details">
                     <h3>Sustainability</h3>
@@ -396,7 +396,7 @@
               <div class="col-12" data-aos="fade-left" data-aos-delay="500">
                 <div class="compact-destination">
                   <div class="destination-image">
-                    <img src="focus areas.jpeg" alt="Legacy Benchmark" class="img-fluid">
+                    <img src="Cybersecurity.jpeg" alt="Legacy Benchmark" class="img-fluid">
                   </div>
                   <div class="destination-details">
                     <h3>Cybersecurityy</h3>
