new design4  please

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <div class="col-lg-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="featured-destination">
               <div class="destination-overlay">
-                <img src="focus areas.jpeg" alt="IITK 1986 Reunion" class="img-fluid">
+                <img src="Website Banner-03.webp" alt="IITK 1986 Reunion" class="img-fluid">
                 <div class="destination-info">
 
 
